--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pg": "^7.5.0",
     "query-string": "^6.2.0",
     "request": "latest",
-    "axios": "latest"
+    "axios": "latest",
+    "wappalyzer": "latest"
   }
 }
